# brainbr

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HELP.md  README.md  build.gradle.kts  docker-compose.yml  package-lock.json  package.json  settings.gradle.kts
.amazonq/rules/: CodeRust.md  rag.md
.claude/: settings.local.json
.github/workflows/: ci.yml  web-hardening.yml
apps/web/: .env.example  README.md  eslint.config.js  package.json  playwright.config.cjs  playwright.config.ts  svelte.config.js  vite.config.ts
docker/: docker-compose.yml
docker/postgres/: init.sql
docs/: adr-001-tenant-and-traceability-baseline.md  api-contract.md  architecture.md  backlog.md  coderabbit.md  data-model.md  development-guide.md  openapi.yaml  operations-security.md  runbooks-and-slos.md  svelte5-interactive-project.md  tasklist.md  testing-quality.md  web-hardening.md  web-patterns.md
docs/schemas/: legacy-taxes-v1.schema.json  rag-output-v1.schema.json  split-payment-event-v1.schema.json
migrations/: 20240101000001_baseline.sql  20240101000002_baseline_extensions.sql  20240101000003_core_schema.sql  20240101000004_core_tables_tenancy.sql  20240101000005_phase2_ingestion_audit.sql  20240101000006_phase3_compliance_split_payment.sql  20240101000007_split_payment_minor_units.sql  20240101000008_knowledge_base_shared_select_policy.sql  20240101000010_transition_effective_rate.sql  20240101000011_hnsw_chunk_embedding.sql
scripts/: dev-jwt.mjs
sql/: README.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/queue/: mod.rs
(+181 files in other folders)
