[package]
name = "fiscalbrain-br"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
bb8 = "0.8"
bb8-redis = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth / JWT
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Config / env
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
